# hermes-dec

./: .gitattributes  .gitignore  README.md  hbc-decompiler  hbc-disassembler  hbc-file-parser  hbc_decompiler.py  hbc_disassembler.py  hbc_file_parser.py  hermes_dec_gui.py  opcodes_table.html  pyproject.toml  setup.py  snapcraft.yaml
decompilation/: defs.py  hbc_decompiler.py  pass0_internally_disassemble.py  pass1_make_graphes.py  pass2_make_atomic_flow.py  pass3_structure_decompiled_flow.py
disassembly/: hbc_disassembler.py
docs/: GUI index database format.md  GUI index worker pipe IPC.md  GUI index worker socket comm.md  GUI server websocket protocol.md  Pass1c Cycling detection + Block Distance from root Weighting Algo.md  opcodes_table.html
notes/: 2022_12_09_______code_traverser_proposal.py  Notes about GetNextPName - 29 Novembre 2022.odt  Notes about decompiler improvement steps - 23 November 2022.odt  Notes about statement fusion algo - 5 December 2022.odt  Notes about the Hermes VM functioning.odt  Notes annotated bytecode - 27 October 2022.odt  Sample Hermes playground test code.js  hbc_bytecode_file_headers_structure_notes.txt  hbc_function_headers_structure_notes.txt  regex_processing_notes.txt
parsers/: debug_info_parser.py  git_tags.sh  hbc_bytecode_parser.py  hbc_file_parser.py  hbc_parser.py  pretty_print.py  regen_hbc_opcodes.sh  regexp_bytecode_parser.py  serialized_literal_parser.py
tests/: build.sh  build_real_samples.sh  sample.hbc  sample.hermes_dec_hasm  sample.hermes_dec_hdec  sample.hermes_dec_header  sample.hermes_objdump_hasm  sample.hermes_pretty_hasm  sample.hermes_raw_hasm  sample.js  sample_real.hermes_dec_header  (+1 more)
utils/: git_tags.ps1  (+5 more)
(+213 files in other folders)
